--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     <p>Boia Filtrante de Microplásticos</p>
                 </div>
                 <div class="footer__info">
-                    <p>&copy; 2025 - SENAC Santa Cruz do Sul</p>
+                    <p>&copy; 2025 Rodrigo Penno Dini - Todos os direitos reservados</p>
                     <p>Desenvolvido por Rodrigo Penno Dini</p>
                 </div>
             </div>
