--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <nav class="nav">
             <div class="container">
                 <div class="nav__brand">
-                    <h1 class="nav__title">Projeto Salpa</h1>
-                    <span class="nav__subtitle">Boia Filtrante de Microplásticos</span>
+                    <img src="assets/logo.png" alt="Salpa Project logo">
                 </div>
                 <ul class="nav__menu" id="nav-menu">
                     <li><a href="#sobre" class="nav__link">Sobre</a></li>
@@ -43,7 +42,7 @@
                 <h2 class="hero__subtitle">Boia Filtrante de Microplásticos</h2>
                 <p class="hero__description">
                     Tecnologia inovadora de baixo custo para a remediação de microplásticos em corpos d'água,
-                    desenvolvida por Rodrigo Dini, aluno do SENAC Santa Cruz do Sul.
+                    desenvolvida por Rodrigo Dini com apoio de João Vitor Rangel e Vitor Kniphoff, alunos do SENAC Santa Cruz do Sul.
                 </p>
                 <div class="hero__actions">
                     <a href="#artigo" class="btn btn--primary btn--lg">Acessar Artigo Científico</a>
@@ -63,16 +62,19 @@
             <h2 class="section__title">Patrocinadores</h2>
             <div class="sponsors-grid">
                 <div class="sponsor-item">
-                    <div class="sponsor-logo">
-                        <img src="assets/aquapureLogo.png" alt="Patrocinador atual" class="sponsor-image">
-                    </div>
+                    <a href="https://ecologambiental.com.br">
+                        <div class="sponsor-logo">
+                            <img src="assets/ecolog.png" alt="Patrocinador: Ecolog serviços ambientais" class="sponsor-image">
+                        </div>
+                    </a>
                 </div>
                 <div class="sponsor-item sponsor-item--cta">
                     <div class="sponsor-cta">
                         <h3 class="sponsor-cta__title">Seja um patrocinador do nosso projeto</h3>
                         <p class="sponsor-cta__text">Apoie a inovação em tecnologia ambiental e faça parte da solução
                             para um futuro mais sustentável</p>
-                        <a href="https://drive.google.com/file/d/1dz7KztQa4dgFgrECnf0-cyE6kXNncmTg/view?usp=sharing" class="btn btn--primary btn--sm">Clique aqui e veja mais informações</a>
+                        <a href="https://drive.google.com/file/d/1dz7KztQa4dgFgrECnf0-cyE6kXNncmTg/view?usp=sharing"
+                            class="btn btn--primary btn--sm">Clique aqui e veja mais informações</a>
                     </div>
                 </div>
             </div>
@@ -164,7 +166,7 @@
                 </div>
                 <div class="section__image">
                     <div class="image-placeholder">
-                        <img src="assets/image (4).png" class="pictures">
+                        <img src="assets/blender.png" class="pictures">
                     </div>
                 </div>
             </div>
