--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <h2 class="hero__subtitle">Boia Filtrante de Microplásticos</h2>
                 <p class="hero__description">
                     Tecnologia inovadora de baixo custo para a remediação de microplásticos em corpos d'água,
-                    desenvolvida por Rodrigo Dini com apoio de João Vitor Rangel e Vitor Kniphoff, alunos do SENAC Santa Cruz do Sul.
+                    desenvolvida por Rodrigo Dini com apoio de João Vitor Rangel e Vitor Kniphoff, alunos do SENAC Santa
+                    Cruz do Sul.
                 </p>
                 <div class="hero__actions">
                     <a href="#artigo" class="btn btn--primary btn--lg">Acessar Artigo Científico</a>
@@ -64,7 +65,16 @@
                 <div class="sponsor-item">
                     <a href="https://ecologambiental.com.br">
                         <div class="sponsor-logo">
-                            <img src="assets/ecolog.png" alt="Patrocinador: Ecolog serviços ambientais" class="sponsor-image">
+                            <img src="assets/ecolog.png" alt="Patrocinador: Ecolog serviços ambientais"
+                                class="sponsor-image">
+                        </div>
+                    </a>
+                </div>
+                <div class="sponsor-item">
+                    <a href="https://quimisulsc.com.br">
+                        <div class="sponsor-logo">
+                            <img src="assets/quimisul.png" alt="Patrocinador: Ecolog serviços ambientais"
+                                class="sponsor-image">
                         </div>
                     </a>
                 </div>
