Troca da imagem capa

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="hero__image">
                 <div class="image-placeholder">
-                    <img src="assets/render3.png" class="pictures">
+                    <img src="assets/newrender2.png" class="pictures">
                 </div>
             </div>
         </div>
