--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="results-grid">
                 <div class="result-card">
                     <h3 class="result-card__title">Melhor Composição</h3>
-                    <p class="result-card__value">Óleo de soja, pó de ferro e ácido oleico</p>
+                    <p class="result-card__value">Reagentes seguros e acessíveis</p>
                     <p class="result-card__description">Formulação otimizada após testes extensivos</p>
                 </div>
                 <div class="result-card">
